k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fixmaster-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: fixmaster  # Должно совпадать с labels в template твоего Deployment
  ports:
    - protocol: TCP
      port: 80          # Порт, на котором сервис будет доступен внутри кластера
      targetPort: 8000  # Порт, который слушает твой контейнер (Uvicorn)
