k8s/fixmaster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fixmaster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fixmaster-service  # Имя сервиса, который мы только что создали
                port:
                  number: 80             # Порт сервиса (не контейнера!)
